# NeurNet

./: .FonctionsPerceptron.autosave.xopp  .gitignore  CMakeLists.txt  FonctionsPerceptron.xopp  NeurNet.cbp  NeurNet.cbp.save  NeurNet.depend  NeurNet.layout  NeurNet.layout.save  main.cpp  main.cpp.save
Doc/: .calculs.autosave.xopp  calculs.xopp
demo/: NeurNet
include/: DataSample.hpp  DataSample.hpp.save  DataSet.hpp  DataSet.hpp.save  Dendrite.h  Dendrite.hpp  Graphic.hpp  Graphics.hpp  Graphics.hpp.save  Layer.hpp  Matrix.hpp  MultiLayerNetwork.hpp  Network.hpp  NeurNetDefs.hpp  Perceptron.h  Perceptron.hpp  Perceptron.hpp.save
src/: DataSample.cpp  DataSample.cpp.save  DataSet.cpp  DataSet.cpp.save  Dendrite.cpp  Graphic.cpp  Graphics.cpp  Graphics.cpp.save  Layer.cpp  Matrix.cpp  MultiLayerNetwork.cpp  Network.cpp  Perceptron.cpp  Perceptron.cpp.save
